# MLOpsPythonDemo1

./: Makefile  demo.py
.github/workflows/: ci.yml  main.yml
train/: azureml_run_pipeline.py  create_labelling_project.py  dataset.py  extraction_dataset.py  pyproject.toml  run_AzureML.sh  run_create_project.sh  setup_AzureML.sh
train/extraction/: command.py  command.yaml  extraction.py  pyproject.toml  requirements.txt
train/extraction/tests/: extraction_tests.py
train/label_split_data/tests/: label_split_data_test.py
train/labelling/: create_project.py  dataset.py  ecotag.py  pyproject.toml  run.py  run.sh  run_create_project.py  run_create_project.sh  run_download_labels.py  run_download_labels.sh
train/train/: .dockerignore
