[tool.poetry]
name = "pipeline"
version = "0.0.0"
description = ""
authors = ["Guillaume Chervet <guillaume.chervet@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.10"
mldesigner = "0.1.0b17"
azure-ai-ml = "1.12.1"
"azure.identity" = "1.15.0"
aiohttp = "3.9.1"
requests_oauth2client = "1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
